adding href for common links

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               width="14"
               height="14px"
             />
-            <span style="margin-left: 8px;">Backyard Symphony</span>
+            <span style="margin-left: 8px;"><a href="https://www.linkedin.com/company/backyard-symphony/"> Backyard Symphony</a></span>
           </div>
           <div class="contact-details-text">
             <img
@@ -286,7 +286,7 @@
               width="14"
               height="14px"
             />
-            <span style="margin-left: 8px;">www.backyardex.com</span>
+            <span style="margin-left: 8px;"><a href="">www.backyardex.com</a></span>
           </div>
           <div class="contact-details-text">
             <img
