updating instructions font

--- a/index.html
+++ b/index.html
@@ -65,7 +65,17 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      /* font-family: HT Moshreq Pro; */
     }
+
+    .form-wrapper-instructions{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: HT Moshreq Pro;
+    }
+
     h1 {
       font-size: 24px;
       color: #333;
@@ -217,7 +227,7 @@
       <h1>Instructions</h1>
 
       <!-- Form Section -->
-      <div class="form-container">
+      <div class="form-container" style="font-family: HT Moshreq Pro;">
         <p>Copy to Clipboard is disabled intially so:</p>
         <ol>
           <li>Enter your full name in both English and Arabic.</li>
@@ -228,7 +238,7 @@
         </ol>
         <span>Once copied, paste the signature into your email client settings.</span>
       </div>
-  </div>
+    </div>
 
     <div class="form-wrapper">
       
